my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/EDMETH/EDMETH.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EDMETH.dml:10:1: warning WEXPERIMENTAL: Use of unsupported feature: traits
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EDMETH.dml:16:1: warning WEXPERIMENTAL: Use of unsupported feature: traits
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EDMETH.dml:19:5: error EDMETH: attempt to override non-default method 'm'
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EDMETH.dml:12:5: conflicting definition
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EDMETH.dml:47:1: In x
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EDMETH.dml:43:5: warning WEXPERIMENTAL: Use of unsupported feature: more than one level of method overrides
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EDMETH.dml:48:8: In template c
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EDMETH.dml:43:5: error EDMETH: attempt to override non-default method 'foo'
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EDMETH.dml:37:5: conflicting definition
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EDMETH.dml:24:1: In z
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EDMETH.dml:27:5: error EDMETH: attempt to override non-default method 'n'
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EDMETH.dml:21:5: conflicting definition
